# ERP

./: .gitignore  .impeccable.md  FRONTEND_IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  error_handlers.py
backend/app/core/: config.py  i18n_config.py  status_codes.py
backend/app/db/: session.py  uow.py
backend/app/schemas/: i18n.py  responses.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_company.py  test_customers.py  test_dashboard.py  test_document_parties.py  test_export_contracts.py  test_export_quotations.py  test_files.py  test_finance.py  test_finance_fee_payments.py  test_finance_misc_fees.py  test_finance_overview.py  test_finance_payments.py  test_finance_port_data.py  test_finance_receipts.py  test_finance_reimbursements.py  test_finance_reports.py  test_finance_settlements.py  test_finance_tax_refunds.py  test_followup.py  test_health.py  test_inbound_orders.py  test_inbound_plans.py  test_organization.py  test_outbound_orders.py  test_outbound_plans.py  test_partners.py  test_printing.py  test_products.py  test_purchase_contracts.py  test_purchase_inquiries.py  test_purchase_invoice_notices.py  test_quality_inspections.py  test_reporting_approvals.py  test_reporting_statistics.py  test_sample_deliveries.py  test_sample_records.py  test_sample_requests.py  test_shipments.py  test_suppliers.py  (+2 more)
backend/tests/architecture/: test_backend_file_boundaries.py  test_fastapi_layers.py  test_finance_router_contract.py
(+500 files in other folders)
